--- a/index.html
+++ b/index.html
@@ -3,61 +3,31 @@
 <head>
   <meta charset='UTF-8'>
   <title></title>
+
+  <style>
+    img {
+      width: 400px;
+    }
+    .site-img {
+      border: 0px 40px 0px 0px solid transparent;
+    }
+  </style>
 </head>
-
-<style>
-  img {
-    width: 400px;
-  }
-  .container {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
-  .show-img-overlay {
-    position: relative;
-    bottom: 60px;
-    font-size: 21px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  .hide-img-overlay {
-    position: relative;
-    bottom: 60px;
-    font-size: 21px;
-    visibility: hidden;;
-  }
-</style>
 <body>
-
-  <div class="container">
+  <div class='container'>
     <img src="https://s3.amazonaws.com/bottega-devcamp/browser-js/laptop.jpg" class="site-img" alt="Laptop">
-    <div class="hide-img-overlay">Image Description</div>
   </div>
-
-  <div class="container">
-    <img src="https://s3.amazonaws.com/bottega-devcamp/browser-js/another-laptop.jpg" class="site-img" alt="Laptop">
-    <div class="hide-img-overlay">Some Other Image Description</div>
-  </div>
-
 </body>
 
 <script>
-  const img = document.getElementsByClassName('site-img')[0];
-  img.addEventListener('click', (e) => {
-    debugger;
+  const laptop = document.querySelector('.site-img');
+
+  laptop.addEventListener('mouseover', (e) => {
+    e.target.style.borderRight = '40px solid red';
   });
-  const imgs = document.querySelectorAll('.site-img');
-  imgs.forEach(img => {
-    img.addEventListener('mouseover', (event) => {
-      const captionElement = event.target.parentElement.children[1];
-      captionElement.className = 'show-img-overlay';
-    });
-  });
-  imgs.forEach(img => {
-    img.addEventListener('mouseout', (event) => {
-      const captionElement = event.target.parentElement.children[1];
-      captionElement.className = 'hide-img-overlay';
-    });
+
+  laptop.addEventListener('mouseout', (e) => {
+    e.target.style.borderRight = '40px solid transparent';
   });
 </script>
 </html>
