--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   // msgInput.addEventListener('keyup', (e) => {
   //   console.log(e);
   // });
-  msgInput.onkeyup = function() {
+  msgInput.onkeydown = function() {
     counter.innerHTML = max - this.value.length;
     if(!getCurrentContentLength(this.value, (max - 1))) {
       msgInput.disabled = true;
